--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </table>
      </p>
      <hr>
-    <h3> <a href="C:\html\my hobbies.html"> My Hobbies      </a> 
+    <h3> <a href="C:\html\my hobbies.html"> My Hobbies      </a> <br>
 
     <a href="C:\html\contact me.html">   Contact Me</a>
         
