--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellspacing="20">
       <tr>
         <td>
-          <img src="C:\html\add me.jpg" alt="ashish profile picture">
+          <img src="add me.jpg" alt="ashish profile picture">
         </td>
         <td>
           <h1>ASHISH SURYAWANSHI</h1>
