--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       </table>
      </p>
      <hr>
-    <h3> <a href="my hobbies.html"> My Hobbies      </a> <br>
+    <h3> <a href="html/my hobbies.html"> My Hobbies      </a> <br>
 
-    <a href="contact me.html">   Contact Me</a>
+    <a href="html/contact me.html">   Contact Me</a>
         
         
     </h3>
