--- a/html/contact me.html
+++ b/html/contact me.html
@@ -4,7 +4,7 @@
 
 <ol>
     <li><a href="https://www.instagram.com/simplyashish10/"><h3>Instagram profile</h3></a></li><hr>
-    <li><a href="email adress.html"><h3>Email Adress</h3></a></li><hr>
+    <li><h3>Email Adress : Ashishsuryawanshi003@gmail.com</h3></li><hr>
     
     </li>
     <form action="mailto:ashishsuryawanshi003@gmail.com" method="post" enctype="text/plain">
