--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    
             <title>  💀 THINGS DONE SIMPLY 💀 </title>
     </head>
+     <link rel="icon" href="https://imgs.search.brave.com/TegEHPYw7FU3g-wB_B3TKXwwiyuxARVF6_9K9ppx1GE/rs:fit:600:700:1/g:ce/aHR0cHM6Ly9pY29u/LWxpYnJhcnkuY29t/L2ltYWdlcy9hLWlj/b24vYS1pY29uLTQu/anBn" type="image/icon type">
   <body>
     <table cellspacing="20">
       <tr>
